tests/tests/c_docs_none.h

typedef struct simpleservice simpleservice;
typedef enum ffierror
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_DELEGATE = 300,
    FFIERROR_FAIL = 400,
    } ffierror;
typedef struct inner
    {
    float x;
    } inner;
typedef struct local
    {
    uint32_t x;
    } local;
typedef struct vec3f32
    {
    float x;
    float y;
    float z;
    } vec3f32;
typedef uint8_t (*fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint8_t (*callbacku8)(uint8_t value);
typedef uint32_t (*mycallback)(uint32_t value);
typedef uint32_t (*mycallbacknamespaced)(uint32_t value);
typedef void (*sumdelegate1)();
typedef int32_t (*sumdelegate2)(int32_t x, int32_t y);
typedef ffierror (*sumdelegatereturn)(int32_t x, int32_t y);
typedef void (*sumdelegatereturn2)(int32_t x, int32_t y);
typedef struct container
    {
    local foreign;
    } container;
typedef struct sliceu8
    {
    const uint8_t* data;
    uint64_t len;
    } sliceu8;
typedef struct slicemutconstptri8
    {
    const const char** data;
    uint64_t len;
    } slicemutconstptri8;
typedef struct slicemutu32
    {
    const uint32_t* data;
    uint64_t len;
    } slicemutu32;
typedef struct slicemutu8
    {
    const uint8_t* data;
    uint64_t len;
    } slicemutu8;
typedef struct optioninner
    {
    inner t;
    uint8_t is_some;
    } optioninner;
typedef void (*mycallbackvoid)(const void* ptr);
typedef struct delegatecallbackmycallbackcontextual
    {
    mycallbackcontextual callback;
    const void* context;
    } delegatecallbackmycallbackcontextual;
typedef struct slicevec3f32
    {
    const vec3f32* data;
    uint64_t len;
    } slicevec3f32;
typedef uint8_t (*callbackffislice)(sliceu8 slice);
typedef void (*callbackslicemut)(slicemutu8 slice);
typedef vec3f32 (*callbackhugevecslice)(slicevec3f32 slice);
uint8_t callback(fptr_fn_u8_rval_u8 callback, uint8_t value);
uint32_t pattern_ffi_slice_1b(slicemutu32 ffi_slice);
vec3f32 pattern_ffi_slice_2(slicevec3f32 ffi_slice, int32_t i);
void pattern_ffi_slice_3(slicemutu8 slice, callbackslicemut callback);
void pattern_ffi_slice_4(sliceu8 slice, slicemutu8 slice2);
void pattern_ffi_slice_5(const sliceu8* slice, slicemutu8* slice2);
void pattern_ffi_slice_6(const slicemutu8* slice, callbacku8 callback);
uint32_t pattern_ffi_slice_7(slicemutconstptri8 slices);
uint8_t pattern_ffi_slice_delegate(callbackffislice callback);
vec3f32 pattern_ffi_slice_delegate_huge(callbackhugevecslice callback);
optioninner pattern_ffi_option_1(optioninner ffi_slice);
inner pattern_ffi_option_2(optioninner ffi_slice);
uint8_t pattern_ffi_bool(uint8_t ffi_bool);
char pattern_ffi_cchar(char ffi_cchar);
const char* pattern_ffi_cchar_const_pointer(const char* ffi_cchar);
char* pattern_ffi_cchar_mut_pointer(char* ffi_cchar);
uint64_t pattern_api_guard();
uint32_t pattern_callback_1(mycallback callback, uint32_t x);
mycallbackvoid pattern_callback_2(mycallbackvoid callback);
void pattern_callback_3(delegatecallbackmycallbackcontextual callback, uint32_t x);
uint32_t pattern_callback_4(mycallbacknamespaced callback, uint32_t x);
sumdelegate1 pattern_callback_5();
sumdelegate2 pattern_callback_6();
ffierror pattern_callback_7(sumdelegatereturn c1, sumdelegatereturn2 c2, int32_t x, int32_t i, int32_t* o);
void pattern_surrogates_1(local s, container* c);
ffierror simple_service_destroy(simpleservice** context);
ffierror simple_service_new_with(simpleservice** context, uint32_t some_value);
ffierror simple_service_new_without(simpleservice** context);
ffierror simple_service_new_with_string(simpleservice** context, const char* ascii);
ffierror simple_service_new_failing(simpleservice** context, uint8_t some_value);